# starting-ragchatbot-codebase

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  format.sh  prompt.md  pyproject.toml  quality_check.sh  run.sh
backend/: ai_generator.py  app.py  config.py  rag_system.py  search_tools.py
backend/tests/: FIX_SUMMARY.md  TEST_ANALYSIS.md  __init__.py  conftest.py  test_ai_generator.py  test_api_endpoints.py  test_course_search_tool.py  test_diagnostics.py  test_rag_system.py  test_sequential_tool_calling.py
frontend/: index.html  script.js  style.css
